apps/clubs/dci/summercampbot/prod/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: dci-summercampbot
  annotations:
    gatus.cedille/protocol: "tcp"
spec:
  virtualhost:
    fqdn: summercampbot.dciets.etsmtl.club
    tls:
      secretName: dci-summercampbot
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      services:
        - name: summercamp-server
          port: 80
