apps/clubs/dci/summercampbot/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dci-summercampbot
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    gatus.cedille/protocol: "tcp"
spec:
  ingressClassName: contour
  tls:
    - secretName: dci-summercampbot
      hosts:
        - summercampbot.dciets.etsmtl.club
  rules:
    - host: summercampbot.dciets.etsmtl.club
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: summercamp-server
                port:
                  number: 80
